2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Partition_Copy.cc: only allow growing of copy if there is
	  grow support for the filesystem.
	* src/reiser4.cc: added support for copying reiser4 filesystems

2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/GParted_Core.cc: modified warning
	* src/hfsplus.cc: added support for shrinking and copying hfs+
	  filesystems

2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Partition_Resize_Move.cc,
	  src/GParted_Core.cc,
	  src/Win_GParted.cc,
	  src/hfs.cc: added support for shrinking hfs filesystems 

2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/DialogManageFlags.cc: disabled resizing of this dialog
	* include/DialogFeatures.h,
	  include/Makefile.am,
	  include/Win_GParted.h,
	  src/DialogFeatures.cc,
	  src/Makefile.am,
	  src/Win_GParted.cc: renamed 'Filesystems' to 'Features' in the
	  featuredialog to better reflect the actual functionality
	* include/Dialog_Filesystems.h,
	  src/Dialog_Filesystems.cc: removed

2006-04-04 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: bumped to gparted-0.2.4
	  ===================================================

2006-04-04 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/GParted_Core.cc: remove non-existent devices from
	  disabled_automount_devices at every rescan.

2006-04-04 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/GParted_Core.cc: store libparted error in Partition::error if
	  reading the used/unused space failed.

2006-04-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/Dialog_Filesystems.h,
	  src/Dialog_Filesystems.cc: added column 'check'
	* include/GParted_Core.h,
	  src/GParted_Core.cc: use halproperty
	  'storage.automount_enabled_hint' instead of pmount to disable
	  automounting.
	  
2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: improved disabling of automounting. It's still