@@ -1,3 +1,8 @@
+2006-04-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc: creating a new partition on a BSD partitiontable
+	  failed, causing a segfault when setting the partitiontype. fixed.
+
 2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Dialog_Partition_Copy.cc: only allow growing of copy if there is
